--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
     <title>Opeyemi [Isaiah]</title>
   </head>
   <body>
+    <div class="cursor"></div>
+
     <div id="app"></div>
+    <script>
+      const cursor = document.querySelector(".cursor");
+
+      document.addEventListener("mousemove", (e) => {
+        cursor.setAttribute(
+          "style",
+          "top: " + (e.pageY - 10) + "px; left: " + (e.pageX - 10) + "px;"
+        );
+      });
+
+      document.addEventListener("click", (e) => {
+        cursor.classList.add("expands");
+
+        setTimeout(() => {
+          cursor.classList.remove("expands");
+        }, 500);
+      });
+
+      
+    </script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
