--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <script type="module" src="/src/main.js"></script>
    
-    <script>
+    <!-- <script>
       const cursor = document.querySelector(".cursor");
 
       window.addEventListener('mousemove', (e) => {
@@ -34,6 +34,6 @@
         }, 500);
       })
      
-    </script>
+    </script> -->
   </body>
 </html>
